TZ 15 add controllers tests